Eliminato servizio verifica/notifica. Implementate operazioni lettura anagrafica e pendenze.
