# src/main/java/it/govpay/portal/controller/PendenzeController.java
@@ -10,46 +10,17 @@ import it.govpay.portal.api.PendenzeApi;
 import it.govpay.portal.model.Avviso;
 import it.govpay.portal.model.LinguaSecondaria;
 import it.govpay.portal.model.ListaPendenze;
-import it.govpay.portal.model.ListaRicevute;
 import it.govpay.portal.model.Pendenza;
 import it.govpay.portal.model.StatoPendenza;
+import it.govpay.portal.service.PendenzeService;
 
 @RestController
 public class PendenzeController implements PendenzeApi {
 
-    @Override
-    public ResponseEntity<ListaPendenze> getPendenze(
-            StatoPendenza stato,
-            String idA2A,
-            String idPendenza,
-            String idDominio,
-            String iuv) {
-        // TODO: implementare la logica
-        return ResponseEntity.ok(new ListaPendenze());
-    }
+    private final PendenzeService pendenzeService;
 
-    @Override
-    public ResponseEntity<Pendenza> getPendenza(String idA2A, String idPendenza) {
-        // TODO: implementare la logica
-        return ResponseEntity.ok(new Pendenza());
-    }
-
-    @Override
-    public ResponseEntity<Avviso> getAvviso(
-            String idDominio,
-            String numeroAvviso,
-            String gRecaptchaResponse,
-            String idDebitore,
-            String UUID,
-            LinguaSecondaria linguaSecondaria) {
-        // TODO: implementare la logica
-        return ResponseEntity.ok(new Avviso());
-    }
-
-    @Override
-    public ResponseEntity<Resource> getRicevutaPDF(String idDominio, String numeroAvviso) {
-        // TODO: implementare la logica
-        return ResponseEntity.ok().build();
+    public PendenzeController(PendenzeService pendenzeService) {
+        this.pendenzeService = pendenzeService;
     }
 
     @Override
@@ -65,9 +36,35 @@ public class PendenzeController implements PendenzeApi {
     }
 
     @Override
-    public ResponseEntity<ListaRicevute> getRicevute() {
+    public ResponseEntity<Avviso> getAvviso(
+            String idDominio,
+            String numeroAvviso,
+            String gRecaptchaResponse,
+            String idDebitore,
+            String UUID,
+            LinguaSecondaria linguaSecondaria) {
+        return pendenzeService.getAvviso(idDominio, numeroAvviso)
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
+    }
+
+    @Override
+    public ResponseEntity<Pendenza> getPendenza(String idDominio, String numeroAvviso) {
+        return pendenzeService.getPendenza(idDominio, numeroAvviso)
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
+    }
+
+    @Override
+    public ResponseEntity<ListaPendenze> getPendenze(String idDominio, StatoPendenza stato) {
+        ListaPendenze pendenze = pendenzeService.getPendenze(idDominio, stato);
+        return ResponseEntity.ok(pendenze);
+    }
+
+    @Override
+    public ResponseEntity<Resource> getRicevuta(String idDominio, String numeroAvviso) {
         // TODO: implementare la logica
-        return ResponseEntity.ok(new ListaRicevute());
+        return ResponseEntity.ok().build();
     }
 
 }
